[package]
name = "ropro-patcher"
version = "2.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
platform-dirs = "0.3.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
terminal-menu = "2.0.5"
crx-dl = { git = "https://github.com/Stefanuk12/crx-dl.git" }
zip-extract = "0.1.2"
